[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Highscore/ShowHighscores.gd" type="Script" id=1]
[ext_resource path="res://Fonts/code_bold_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/code_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/code_bold_even_smaller.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/gamejolt_api_v2/main.gd" type="Script" id=5]
[ext_resource path="res://addons/gamejolt_api_v2/gj_icon.png" type="Texture" id=6]

[node name="ShowHighscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0313726, 0.905882, 0.972549, 0.180392 )

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 2 )
text = "HIGHSCORES"
align = 1
valign = 1

[node name="Fetching" type="Label" parent="."]
margin_top = 422.605
margin_right = 1920.0
margin_bottom = 648.605
custom_fonts/font = ExtResource( 3 )
text = "fetching highscores..."
align = 1
valign = 1

[node name="NotFound" type="Label" parent="."]
visible = false
margin_left = 460.0
margin_top = 800.0
margin_right = 1460.0
margin_bottom = 912.0
custom_fonts/font = ExtResource( 4 )
text = "No highscores have been found
be the first one to enter your score in the holy grail"
align = 1
valign = 1

[node name="NewGameButton" type="Button" parent="."]
anchor_right = 1.0
margin_left = 500.0
margin_top = 950.0
margin_right = -1020.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
text = "New game"

[node name="MainMenuButton" type="Button" parent="."]
anchor_right = 1.0
margin_left = 1100.0
margin_top = 950.0
margin_right = -420.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -1290, -630 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = true
text = "Main Menu"

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 6 )
}
private_key = "867141e4f6d7c303193c9be0d19e5523"
game_id = "403339"

[node name="HighscoreList" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="List1to5" type="Label" parent="HighscoreList"]
margin_left = 30.0
margin_top = 200.0
margin_right = 730.0
margin_bottom = 950.0
custom_fonts/font = ExtResource( 3 )
text = "1. 
2. 
3. 
4. 
5. "
valign = 1
max_lines_visible = 5

[node name="List6to10" type="Label" parent="HighscoreList"]
margin_left = 1000.0
margin_top = 200.0
margin_right = 1700.0
margin_bottom = 950.0
custom_fonts/font = ExtResource( 3 )
text = "6. 
7. 
8. 
9. 
10. "
valign = 1
max_lines_visible = 5

[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="api_scores_fetched" from="GameJoltAPI" to="." method="_on_GameJoltAPI_api_scores_fetched"]
